wedding image update

--- a/sytles.css
+++ b/sytles.css
@@ -451,11 +451,17 @@ footer {
     justify-content: center;
 }
 .wedimg1 {
+    width: 300px;
+    height: 350px;
     margin: 20px;
 }
 .wedimg2{
+    width: 300px;
+    height: 350px;
     margin: 20px;
 }
 .wedimg3{
+    width: 300px;
+    height: 350px;
     margin: 20px;
 }
